--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
     </build>
 
     <dependencies>
+        <dependency>
+            <groupId>io.reactivex</groupId>
+            <artifactId>rxjava</artifactId>
+            <version>1.1.6</version>
+        </dependency>
 
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
