Add handling end of line in property file

--- a/template - копия.properties
+++ b/template - копия.properties
@@ -10,10 +10,14 @@ asdasd
 
 
 #Comment2
-var7=перва€—трока\
-  слито \
-    тутпробел¬тора€ строка\\
-   треть€ строка
+var7=—ледуща€ строка записываетс€ как есть \
+  слито сЋедующа€ тоже \\\
+    тутпробел¬тора€ \\ \\ \\ » слудующа€ строка будет записанастрока \\\\\\\\\\\\\\\\\
+  ј следующа€ строка не должна попасть в файл\\\\\\\\\\\\\\\\\\\\\\
+   треть€ строка\
+    эта строка нее должна попасть\\
+  как и эта
+
 var8=asdasd
 #comment
 asdasdasd
