Remove Logger and add deleting instead

--- a/template - копия.properties
+++ b/template - копия.properties
@@ -9,7 +9,9 @@ var4=asd\
 asdasd
 
 
-#Comment2
+#Comment2 \
+  dsfsdf'sdf \
+  sdfsdfsdfsdf \\
 var7=—ледуща€ строка записываетс€ как есть \
   слито сЋедующа€ тоже \\\
     тутпробел¬тора€ \\ \\ \\ » слудующа€ строка будет записанастрока \\\\\\\\\\\\\\\\\
