--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.artglorin</groupId>
     <artifactId>belprime_clear-property-app</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1-SNAPSHOT</version>
 
 
     <dependencies>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>com.artglorin</groupId>
             <artifactId>JavaFxUtil</artifactId>
-            <version>1.1-SNAPSHOT</version>
+            <version>0.0.2-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -61,6 +61,9 @@
                     </execution>
                 </executions>
                 <configuration>
+                    <outputDirectory>
+                        ${project.basedir}/bin
+                    </outputDirectory>
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
@@ -73,7 +76,6 @@
                 </configuration>
             </plugin>
 
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -84,11 +86,10 @@
                             <mainClass>com.artglorin.belprime.clearPropertyApp.Main</mainClass>
                         </manifest>
                     </archive>
+                    <outputDirectory>${project.basedir}/bin</outputDirectory>
                 </configuration>
                 <version>2.3.2</version>
             </plugin>
-
-
         </plugins>
 
     </build>
